crates/velme-syntax/tests/snapshots/parser__golden_reject@goal_body_unknown_block.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/goal_body_unknown_block.velme
---
[
  {
    "code": "VL0101",
    "help": "did you mean `check`?",
    "message": "I didn't expect `chek` here — I was looking for `budget`, `call`, `check`, `examples` or `plan`.",
    "severity": "error",
    "span": [
      145,
      149
    ]
  }
]
