crates/velme-syntax/tests/snapshots/parser__golden_reject@goal_decl_missing_arrow.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/goal_decl_missing_arrow.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `Number` here — I was looking for `->`.",
    "severity": "error",
    "span": [
      93,
      99
    ]
  }
]
