crates/velme-syntax/tests/snapshots/parser__golden_reject@header_missing_colon.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/header_missing_colon.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `velme` here — I was looking for `:`.",
    "severity": "error",
    "span": [
      56,
      61
    ]
  }
]
