crates/velme-syntax/tests/snapshots/parser__golden_reject@header_unsupported_version.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/header_unsupported_version.velme
---
[
  {
    "code": "VL0106",
    "help": "change the first line to `language: velme/0.1`",
    "message": "This file is written for `velme/0.10`, but this Velme understands `velme/0.1`.",
    "severity": "error",
    "span": [
      96,
      106
    ]
  }
]
